# Qt-Server

./: CMakeLists.txt  README.md  index.html  main.cpp  server.cpp  server.h
